# FlowBot

./: .dockerignore  .gitignore  README.md  WORKFLOW.md  installer.nsh  package-lock.json  package.json  text.md
.github/: release-drafter.yml
.github/workflows/: docker-release.yml
.mimocode/plans/: 1781171813415-clever-cactus.md
docker/: Dockerfile  README.md  docker-compose.yml  pinyin.py  start.sh  supervisord.conf
docker/webui/: server.js
docker/webui-vue/: app.js  index.html  style.css
docker/webui/public/: app.js  index.html  style.css
electron/: main.ts  preload.ts
electron/plugins/: enhancedMessageSender.ts  highConcurrencyHook.ts  linuxMessageHook.ts  messageHookService.ts  plugin-interface.ts  pluginManager.ts  simpleMessageSender.ts
electron/services/: botManager.ts  chatService.ts  config.ts  dbPathService.ts  httpService.ts  imageDecryptService.ts  keyServiceLinux.ts  logger.ts  messagePushService.ts  oneBotServer.ts  oneBotWsClient.ts
resources/hooks/win32/x64/: CMakeLists.txt  build.bat  message_hook.cpp  message_hook.h
scripts/: patch-vite-sass.js
src/: App.tsx
src/components/: MessageInput.css  MessageInput.tsx  Sidebar.tsx
src/pages/: AddAccountPage.tsx  BotConfigPage.scss  BotConfigPage.tsx  ChatPage.tsx  SettingsPage.tsx
src/services/: config.ts  messageService.ts
src/types/: electron.d.ts
